// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have a valid structure by default 1`] = `
Object {
  "assets": Array [],
  "commands": Array [],
  "dependencies": Object {},
  "platforms": Object {},
  "project": Object {},
  "reactNativePath": "<<REPLACED>>",
  "root": "<<REPLACED>>",
}
`;

exports[`should load an out-of-tree "windows" platform that ships with a dependency 1`] = `
Object {
  "platforms": Object {
    "windows": Object {},
  },
}
`;

exports[`should load commands from "react-native-foo" and "react-native-bar" packages 1`] = `
Array [
  Object {
    "func": [Function],
    "name": "foo-command",
  },
  Object {
    "func": [Function],
    "name": "bar-command",
  },
]
`;

exports[`should merge project configuration with default values: snapshoting \`react-native-test\` config 1`] = `
Object {
  "name": "react-native-test",
  "platforms": Object {
    "android": null,
    "ios": Object {
      "podspecPath": null,
      "scriptPhases": Array [],
      "sourceDir": "./abc",
    },
  },
  "root": "<<REPLACED>>/node_modules/react-native-test",
}
`;

exports[`should not add default React Native config when one present 1`] = `
Array [
  Object {
    "func": [Function],
    "name": "test",
  },
]
`;

exports[`should read a config of a dependency and use it to load other settings 1`] = `
Object {
  "name": "react-native-test",
  "platforms": Object {
    "android": null,
    "ios": Object {
      "podspecPath": "<<REPLACED>>/node_modules/react-native-test/ReactNativeTest.podspec",
      "scriptPhases": Array [],
      "sourceDir": "<<REPLACED>>/node_modules/react-native-test/customLocation",
    },
  },
  "root": "<<REPLACED>>/node_modules/react-native-test",
}
`;

exports[`should return dependencies from package.json 1`] = `
Object {
  "react-native": Object {
    "name": "react-native",
    "platforms": Object {
      "android": null,
      "ios": null,
    },
    "root": "<<REPLACED>>/node_modules/react-native",
  },
  "react-native-test": Object {
    "name": "react-native-test",
    "platforms": Object {
      "android": null,
      "ios": Object {
        "podspecPath": null,
        "scriptPhases": Array [],
        "sourceDir": "<<REPLACED>>/node_modules/react-native-test/ios",
      },
    },
    "root": "<<REPLACED>>/node_modules/react-native-test",
  },
}
`;
